--- a/index.html
+++ b/index.html
@@ -316,11 +316,47 @@
                     <div class="dropdowns">
                         <div class="drop">
                             <h3 class="drop__heads">ARE ALL THE TEMPLATES CUSTOMIZABLE?</h3>
+                            <img class="dropdown__btn" src="./assets/dropdown__btn.svg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-       
+        <section id="reactions">
+            <div class="row">
+                <div class="bottom__box__container">
+                    <div class="box__description">
+                    <p class="box__para">Developers all over the world are happily using Treact.</p>
+                    <div class="btns">
+                        <button class="lefty">GET STARTED</button>
+                        <button class="righty">CONTACT US</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="row">
+                <div class="footer__container">
+                    <div class="footer__description">
+                        <div class="top__half">
+                            <div class="main">
+                                <h5 class="main__header">MAIN</h5>
+                                <ul class="main__list">
+                                    <li class="main__list--item">Blog</li>
+                                    <li class="main__list--item">FAQS</li>
+                                    <li class="main__list--item">Support</li>
+                                    <li class="main__list--item">Abort Us</li>
+                                </ul>
+
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="bottom__half"></div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
     </body>
     </html>
