--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </button>
                 <ul class="menu__links" >
                     <li class="menu__list" ><a href="#landing" class="menu__link" onclick="closeMenu()">Home</a></li>
-                    <li class="menu__list" ><a href="###" class="menu__link" onclick="closeMenu()">Books</a></li>
-                    <li class="menu__list" ><a href="#explore" class="menu__link " onclick="closeMenu()">Contact</a></li>
+                    <li class="menu__list" ><a href="#pricing" class="menu__link" onclick="closeMenu()">Plans</a></li>
+                    <li class="menu__list" ><a href="#FAQ" class="menu__link " onclick="closeMenu()">Questions</a></li>
                   
                 </ul>
-            </div>
+             </div>
         </nav> 
     
 </head>
