--- a/index.html
+++ b/index.html
@@ -377,8 +377,12 @@
                 </div>
                 <div class="dropdowns">
                     <div class="drop">
-                        <h3 class="drop__heads">ARE ALL THE TEMPLATES CUSTOMIZABLE?</h3>
-                        <img class="dropdown__btn" src="./assets/dropdown__btn.svg" alt="">
+                        <div class="drop__top">
+                            <h3 class="drop__heads">ARE ALL THE TEMPLATES CUSTOMIZABLE?</h3>
+                            <img class="dropdown__btn" onclick="openDrop()" src="./assets/dropdown__btn.svg" alt="">
+                            <img class="dropdown__btn close__dropdown" onclick="closeDrop()" src="./assets/dropdown__btn.svg" alt="">
+                        </div>
+                            <p class="drop__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab nobis deserunt provident culpa excepturi doloremque hic dolor, neque cumque? Doloribus, laborum soluta nihil omnis praesentium amet sint numquam odio beatae.</p>
                     </div>
                 </div>
             </div>
