commented section out

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </div>
 
     </section>
-    <section id="FAQ">
+    <!-- <section id="FAQ">
         <div class="row">
             <div class="FAQ__content">
                 <div class="FAQ__description">
@@ -399,7 +399,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="reactions">
         <div class="row">
             <div class="bottom__box__container">
