small phone view 70%

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
     <section id="work">
         <div class="row">
-            <div class="descrip__section">
+            <div class="descrip__section value__section">
                 <div class="work__description">
                     <h3 class="purple">QUALITY WORK</h3>
                     <h1 class="description__title header__color">Designed & Developed by <span class="purple">
@@ -193,12 +193,12 @@
                             <li class="steps__list--item">
                                 <span class="step__number">01</span>
                                 <div class="step__description">
-                                    <h6 class="step__header">REGISTER</h6>
+                                    <h6 class="step__header">Register</h6>
                                     <p class="step__para">Create an account with us using Google or Facebook.</p>
                                 </div>
                             </li>
                             <li class="steps__list--item">
-                                <span class="step__number">03</span>
+                                <span class="step__number">02</span>
                                 <div class="step__description">
                                     <h6 class="step__header">Download</h6>
                                     <p class="step__para">Browse and Download the template that you like from the
@@ -222,12 +222,12 @@
     </section>
     <section id="values">
         <div class="row">
-            <div class="descrip__section">
+            <div class="descrip__section value__section">
                 <div class="work__description ">
-                    <h3 class="purple">VALUES</h3>
-                    <h1 class="description__title header__color">We Always Abide by <span class="purple">Our
+                    <h3 class="purple value__head">VALUES</h3>
+                    <h1 class="description__title header__color ging">We Always Abide by <span class="purple">Our
                             Principles</span></h1>
-                    <p class="description__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <p class="description__para ginc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                     <div class="value__items">
@@ -249,8 +249,7 @@
                                 <h3 class="icon__header">Professionalism</h3>
                             </div>
                             <p class="values__para">We assure you that our templates are designed and created by
-                                professional designers.
-                                Learn More</p>
+                                professional designers.</p>
                         </div>
                     </div>
                     <button class="purple__btn learn__more">Learn More</button>
@@ -265,10 +264,10 @@
         <div class="row">
             <div class="pricing__content">
                 <div class="pricing__description">
-                    <h3 class="purple">Pricing</h3>
-                    <h1 class="description__title header__color">Reasonable & Flexible <span class="purple">
+                    <h3 class="purple pricing__head">PRICING</h3>
+                    <h1 class="description__title header__color gege">Reasonable & Flexible <span class="purple">
                             Plans.</span></h1>
-                    <p class="pricing__description__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    <p class="pricing__description__para gigi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                         do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="plans">
