--- a/index.html
+++ b/index.html
@@ -431,45 +431,45 @@
                         </div>
                         <div class="top__half--item">
                             <div class="main">
-                                <h5 class="main__header">MAIN</h5>
+                                <h5 class="main__header">PRODUCT</h5>
                                 <ul class="main__list">
-                                    <li class="main__list--item">Blog</li>
-                                    <li class="main__list--item">FAQS</li>
-                                    <li class="main__list--item">Support</li>
-                                    <li class="main__list--item">Abort Us</li>
+                                    <li class="main__list--item">Log In</li>
+                                    <li class="main__list--item">Personal</li>
+                                    <li class="main__list--item">Business</li>
+                                    <li class="main__list--item">Team</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="top__half--item">
                             <div class="main">
-                                <h5 class="main__header">MAIN</h5>
+                                <h5 class="main__header">PRESS</h5>
                                 <ul class="main__list">
-                                    <li class="main__list--item">Blog</li>
-                                    <li class="main__list--item">FAQS</li>
-                                    <li class="main__list--item">Support</li>
-                                    <li class="main__list--item">Abort Us</li>
+                                    <li class="main__list--item">Logos</li>
+                                    <li class="main__list--item">Events</li>
+                                    <li class="main__list--item">Stories</li>
+                                    <li class="main__list--item">Office</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="top__half--item">
                             <div class="main">
-                                <h5 class="main__header">MAIN</h5>
+                                <h5 class="main__header">TEAM</h5>
                                 <ul class="main__list">
-                                    <li class="main__list--item">Blog</li>
-                                    <li class="main__list--item">FAQS</li>
-                                    <li class="main__list--item">Support</li>
-                                    <li class="main__list--item">Abort Us</li>
+                                    <li class="main__list--item">Career</li>
+                                    <li class="main__list--item">Founders</li>
+                                    <li class="main__list--item">Culture</li>
+                                    <li class="main__list--item">Onboarding</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="top__half--item">
                             <div class="main">
-                                <h5 class="main__header">MAIN</h5>
+                                <h5 class="main__header">LEGAL</h5>
                                 <ul class="main__list">
-                                    <li class="main__list--item">Blog</li>
-                                    <li class="main__list--item">FAQS</li>
-                                    <li class="main__list--item">Support</li>
-                                    <li class="main__list--item">Abort Us</li>
+                                    <li class="main__list--item">GDPR</li>
+                                    <li class="main__list--item">Privacy Policy</li>
+                                    <li class="main__list--item">Terms Of Service</li>
+                                    <li class="main__list--item">Disclaimer</li>
                                 </ul>
                             </div>
                         </div>
@@ -478,21 +478,19 @@
                 <div class="line"></div>
              <div class="bottom__half">
                 <figure class="right__logo">
-                    <img class="nav__logo" src="./assets/logo.svg" alt="">
+                    <img class="nav__logo" src="./assets/logo2.svg" alt="">
+                    <h1 class="treact" >Treact Inc.</h1>
                 </figure>
-                <p></p>
+                <p class="copyright">© 2018 Treact Inc. All Rights Reserved.</p>
                 <div class="hold">
                 <figure class="white__icon__holder">
                     <img class="white__icon" src="./assets/youtube.svg" alt="">
                 </figure>
                 <figure class="white__icon__holder white">
-                    <img class="white__icon" src="./assets/youtube.svg" alt="">
+                    <img class="white__icon" src="./assets/facebook.svg" alt="">
                 </figure>
                 <figure class="white__icon__holder white">
-                    <img class="white__icon" src="./assets/youtube.svg" alt="">
-                </figure>
-                <figure class="white__icon__holder white">
-                    <img class="white__icon" src="./assets/youtube.svg" alt="">
+                    <img class="white__icon" src="./assets/instagram.svg" alt="">
                 </figure>
                 </div>
              </div>
