--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="top__half--item">
+                        <div class="top__half--item last">
                             <div class="main">
                                 <h5 class="main__header">LEGAL</h5>
                                 <ul class="main__list">
