--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
     <section id="work">
         <div class="row">
             <div class="descrip__section value__section">
-                <div class="work__description">
+                <div class="work__description worker">
                     <h3 class="purple">QUALITY WORK</h3>
-                    <h1 class="description__title header__color">Designed & Developed by <span class="purple">
+                    <h1 class="description__title header__color worker">Designed & Developed by <span class="purple">
                             Professionals.</span></h1>
-                    <p class="description__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <p class="description__para worker">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                     <button class="purple__btn learn__more">Learn More</button>
                 </div>
-                <figure class="work__description__img--wrapper">
-                    <img class="work__description__img" src="./assets/q2.png" alt="">
+                <figure class="work__description__img--wrapper ">
+                    <img class="work__description__img worky" src="./assets/q2.png" alt="">
                 </figure>
             </div>
         </div>
@@ -180,7 +180,7 @@
         <div class="row">
             <div class="steps__descrip">
                 <div class="descrip__section">
-                    <figure id="work__description__img--wrapper">
+                    <figure id="work__description__img--wrapper" class="steps__wrapper">
                         <img class="work__description__img steps__img" src="./assets/q3.png" alt="">
                         <img class="bubble__wrap" src="./assets/bubbles.svg" alt="">
                     </figure>
@@ -223,7 +223,7 @@
     <section id="values">
         <div class="row">
             <div class="descrip__section value__section">
-                <div class="work__description ">
+                <div class="work__description worker ">
                     <h3 class="purple value__head">VALUES</h3>
                     <h1 class="description__title header__color ging">We Always Abide by <span class="purple">Our
                             Principles</span></h1>
